--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -71,7 +71,6 @@
             </div>
             <div class="col-md-3 btn-bool">
                 <div class="form-group-btn margin-filas opciones">
-                    <br class="adjust-br">
                     <h6 for="trastorno-depresivo">Trastorno Depresivo</h6>
                     <div class="btn-group">
                         <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
@@ -111,7 +110,7 @@
     </div>
     <div class="footer">
         <br>
-        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <strong>Velazquez Brenda & Zabalet Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
