--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -53,7 +53,7 @@
                 </div>
                 <div id="estudio-comentario" class="margin-filas" style="display: none;">
                     <h6 for="estudio-comentario">Comentario sobre el estudio</h6>
-                    <textarea id="estudio-comentario-text" class="form-control" rows="4"
+                    <textarea id="estudio-comentario-text" class="form-control comment-placeholder" rows="4"
                         placeholder="Comentarios sobre el estudio"></textarea>
                 </div>
                 <div id="image-container" class="image-container">
