--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -53,7 +53,7 @@
 
         <div class="row cuadro-comentarios-medico">
             <div class="col-md-6">
-                <textarea id="comentarios-medicos" class="form-control" rows="4"
+                <textarea id="comentarios-medicos" class="form-control comment-placeholder" rows="4"
                     placeholder="Ingresá tus comentarios"></textarea>
             </div>
         </div>
@@ -79,7 +79,7 @@
 
             <div class="row cuadro-comentarios-medico">
                 <div class="col-md-6">
-                    <textarea id="justificacion-rechazo" class="form-control" rows="4"
+                    <textarea id="justificacion-rechazo" class="form-control comment-placeholder" rows="4"
                         placeholder="Por favor, explique la razón de rechazo del diagnóstico"></textarea>
                 </div>
             </div>
