--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -98,8 +98,8 @@
               Hipertimia displacentera
             </label>
             <label id="check">
-              <input type="checkbox" name="afectividad[]" value="hipotimia" 
-              onclick="unselectUnicos(['eutimia', 'timia-displacentera', 'hipertimia-placentera','hipertimia-displacentera'], name)"/>
+              <input type="checkbox" name="afectividad[]" value="hipotimia"
+                onclick="unselectUnicos(['eutimia', 'timia-displacentera', 'hipertimia-placentera','hipertimia-displacentera'], name)" />
               Hipotimia
             </label>
             <label id="check">
@@ -150,7 +150,7 @@
 
       <div id="bajo-funcionamiento-comentario-id" class="margin-filas" style="display: none;">
         <h6 for="bajo-funcionamiento-comentario-title">Comentario sobre los ámbitos principales</h6>
-        <textarea id="bajo-funcionamiento-comentario" class="form-control" rows="3"
+        <textarea id="bajo-funcionamiento-comentario" class="form-control comment-placeholder" rows="3"
           placeholder="Comentarios sobre el bajo funcionamiento en los ámbitos principales"></textarea>
       </div>
     </div>
