--- a/demo/src/main/resources/static/Login/login.html
+++ b/demo/src/main/resources/static/Login/login.html
@@ -56,7 +56,7 @@
 
     <div class="footer">
         <br>
-        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <strong>Velazquez Brenda & Zabalet Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
 
