--- a/demo/src/main/resources/static/dataset/exportar.html
+++ b/demo/src/main/resources/static/dataset/exportar.html
@@ -57,7 +57,7 @@
 
     <div class="footer">
         <br>
-        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <strong>Velazquez Brenda & Zabalet Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
 
