--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -34,12 +34,12 @@
                 <div class="gray-box">
                     <div class="form-group margin-filas">
                         <label for="nombre">Nombre *</label>
-                        <input type="text" class="form-control" id="nombre" name="nombre"
+                        <input type="text" class="form-control comment-placeholder" id="nombre" name="nombre"
                             placeholder="Ingrese el nombre del paciente" required>
                     </div>
                     <div class="form-group margin-filas">
                         <label for="edad">Edad *</label>
-                        <input type="number" class="form-control" id="edad" name="edad"
+                        <input type="number" class="form-control comment-placeholder" id="edad" name="edad"
                             placeholder="Ingrese la edad del paciente" min="1" max="120" required>
                     </div>
                     <div class="form-group margin-filas">
@@ -129,7 +129,7 @@
 
     <div class="footer">
         <br>
-        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <strong>Velazquez Brenda & Zabalet Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
 
