--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -53,14 +53,12 @@
     </div>
     <div class="footer">
         <br>
-        <strong>Velazquez, Brenda. Zabalet, Candela.</strong>
+        <strong>Velazquez Brenda & Zabalet Candela.</strong>
         <p><strong>Universidad de Morón.</strong></p>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="index.js"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>-->
-
 </body>
 
 </html>
